<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tetamba.androidlibrary.Photoview.PhotoVIewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/photoview_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/glide_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/photoview_intro"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/glide_intro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/photoview_intro2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="How To Use:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/photoview_howtouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/photoview_howtouse"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Example:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/photoview_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/photoview_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

</ScrollView>
