<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tetamba.androidlibrary.Gson.GsonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/gson_img"
            android:src="@drawable/ic_gson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/gson_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gson_intro"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How To Use"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/gson_howtouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gson_howtouse"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/gson_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gson_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/gson_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Example"
            android:layout_margin="16dp"/>
    </LinearLayout>


</ScrollView>
