<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tetamba.androidlibrary.Saripaar.SaripaarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/saripaar_img"
            android:src="@drawable/ic_saripaar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/saripaar_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saripaar_intro"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="How To Use"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/saripaar_howtouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saripaar_howtouse"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/saripaar_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saripaar_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Example"
            android:textColor="#000000"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/saripaar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/saripaar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/saripaar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_margin="16dp"/>
    </LinearLayout>

</ScrollView>
